# My-ModernRobotics

./: .gitignore  README.md  pyproject.toml
notes/: lec_1.md
src/: demo.py
src/pyroki/: README.md
src/pyroki/benchmark/: ik_benchmark.py
src/pyroki/docs/source/: index.rst
src/pyroki/docs/source/examples/: 07_trajopt.rst  08_ik_with_mimic_joints.rst  09_hand_retargeting.rst  10_humanoid_retargeting.rst  11_hand_retargeting_fancy.rst  12_humanoid_retargeting_fancy.rst
src/pyroki/examples/: 04_ik_with_coll.py  07_trajopt.py  09_hand_retargeting.py  10_humanoid_retargeting.py  11_hand_retargeting_fancy.py  12_humanoid_retargeting_fancy.py  13_ik_with_locked_joints.py
src/pyroki/examples/assets/: panda_spheres.json  ur5_spheres.json
src/pyroki/examples/pyroki_snippets/: _online_planning.py  _solve_ik.py  _solve_ik_with_base.py  _solve_ik_with_collision.py  _solve_ik_with_manipulability.py  _solve_ik_with_multiple_targets.py  _trajopt.py
src/pyroki/examples/retarget_helpers/: _utils.py
src/pyroki/src/pyroki/: __init__.py  _robot.py  _robot_urdf_parser.py  costs.py
src/pyroki/src/pyroki/_residuals/: __init__.py  _pose_residual_analytic_jac.py  _pose_residual_numerical_jac.py  _residuals.py
src/pyroki/src/pyroki/collision/: __init__.py  _collision.py  _geometry.py  _geometry_pairs.py  _robot_collision.py  _utils.py
src/pyroki/tests/: test_ik_vmap.py  viz_collision_sweep.py
